wrappers/Fortran/src/situation_callbacks.f90

! Auto-generated by tools/generate_fortran_bindings.py — Situation 2.4.357 (Consolidate color-space math into situation_impl_color.h; trace table regenerated.)
! Do not edit by hand.

module situation_callbacks
  use iso_c_binding
  use situation_types
  implicit none

  ! Callback signatures from sit/situation_base_callbacks.h
  ! Register with SituationSet* APIs using type(c_funptr).

  abstract interface
    subroutine SituationFileDropCallback(count, paths, user_data) bind(C)
      import :: c_int, c_ptr
      integer(c_int), value :: count
      type(c_ptr), value :: paths
      type(c_ptr), value :: user_data
    end subroutine SituationFileDropCallback

    subroutine SituationFileLoadCallback(data, size, user_data) bind(C)
      import :: c_ptr, c_size_t
      type(c_ptr), value :: data
      integer(c_size_t), value :: size
      type(c_ptr), value :: user_data
    end subroutine SituationFileLoadCallback

    subroutine SituationFileSaveCallback(success, user_data) bind(C)
      import :: c_bool, c_ptr
      logical(c_bool), value :: success
      type(c_ptr), value :: user_data
    end subroutine SituationFileSaveCallback

    subroutine SituationFileTextLoadCallback(text, user_data) bind(C)
      import :: c_ptr
      type(c_ptr), value :: text
      type(c_ptr), value :: user_data
    end subroutine SituationFileTextLoadCallback

    subroutine SituationFocusCallback(gained_focus, user_data) bind(C)
      import :: c_bool, c_ptr
      logical(c_bool), value :: gained_focus
      type(c_ptr), value :: user_data
    end subroutine SituationFocusCallback

    subroutine SituationMaximizeCallback(maximized, user_data) bind(C)
      import :: c_bool, c_ptr
      logical(c_bool), value :: maximized
      type(c_ptr), value :: user_data
    end subroutine SituationMaximizeCallback

    subroutine SituationWindowCloseCallback(user_data) bind(C)
      import :: c_ptr
      type(c_ptr), value :: user_data
    end subroutine SituationWindowCloseCallback

    subroutine SituationKeyCallback(key, scancode, action, mods, user_data) bind(C)
      import :: c_int, c_ptr
      integer(c_int), value :: key
      integer(c_int), value :: scancode
      integer(c_int), value :: action
      integer(c_int), value :: mods
      type(c_ptr), value :: user_data
    end subroutine SituationKeyCallback

    subroutine SituationCharCallback(codepoint, user_data) bind(C)
      import :: c_int, c_ptr
      integer(c_int), value :: codepoint
      type(c_ptr), value :: user_data
    end subroutine SituationCharCallback

    subroutine SituationMouseButtonCallback(button, action, mods, user_data) bind(C)
      import :: c_int, c_ptr
      integer(c_int), value :: button
      integer(c_int), value :: action
      integer(c_int), value :: mods
      type(c_ptr), value :: user_data
    end subroutine SituationMouseButtonCallback

    subroutine SituationCursorPosCallback(position, user_data) bind(C)
      import :: Vector2, c_ptr
      type(Vector2), value :: position
      type(c_ptr), value :: user_data
    end subroutine SituationCursorPosCallback

    subroutine SituationScrollCallback(offset, user_data) bind(C)
      import :: Vector2, c_ptr
      type(Vector2), value :: offset
      type(c_ptr), value :: user_data
    end subroutine SituationScrollCallback

    subroutine SituationJoystickCallback(jid, event, user_data) bind(C)
      import :: c_int, c_ptr
      integer(c_int), value :: jid
      integer(c_int), value :: event
      type(c_ptr), value :: user_data
    end subroutine SituationJoystickCallback

    function SituationStreamReadCallback(pUserData, pBufferOut, bytesToRead) bind(C) result(res)
      import :: c_int64_t, c_ptr
      integer(c_int64_t) :: res
      type(c_ptr), value :: pUserData
      type(c_ptr), value :: pBufferOut
      integer(c_int64_t), value :: bytesToRead
    end function SituationStreamReadCallback

    function SituationStreamSeekCallback(pUserData, byteOffset, origin) bind(C) result(res)
      import :: c_int, c_int64_t, c_ptr
      integer(c_int) :: res
      type(c_ptr), value :: pUserData
      integer(c_int64_t), value :: byteOffset
      integer(c_int), value :: origin
    end function SituationStreamSeekCallback

    subroutine SituationAudioCaptureCallback(input_buffer, frame_count, user_data) bind(C)
      import :: c_int32_t, c_ptr
      type(c_ptr), value :: input_buffer
      integer(c_int32_t), value :: frame_count
      type(c_ptr), value :: user_data
    end subroutine SituationAudioCaptureCallback

    subroutine SituationAudioProcessorCallback(buffer, frames, channels, sampleRate, user_data) bind(C)
      import :: c_int32_t, c_ptr
      type(c_ptr), value :: buffer
      integer(c_int32_t), value :: frames
      integer(c_int32_t), value :: channels
      integer(c_int32_t), value :: sampleRate
      type(c_ptr), value :: user_data
    end subroutine SituationAudioProcessorCallback

    subroutine GLFWerrorfun(error_code, description) bind(C)
      import :: c_int, c_ptr
      integer(c_int), value :: error_code
      type(c_ptr), value :: description
    end subroutine GLFWerrorfun

  end interface

end module situation_callbacks
